--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "alexa-fitbit-heart-query",
+  "name": "alexa-fitbit-checker",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
