--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "alexa-fitbit-checker",
   "version": "1.0.0",
-  "description": "",
+  "description": "An Alexa skill to check heartrate and sleep logged on Fitbit.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
